# flashcards-desktop-app

./: .gitignore  README.md  bootstrap_project.py  fix_syntax.py  pyproject.toml
src/: config.py  main.py
src/domain/: models.py
src/repositories/: database.py  deck_repository.py
src/services/: deck_service.py  study_service.py
src/ui/: main_window.py  styles.py
src/ui/views/: card_creator_view.py  deck_list_view.py  study_view.py
