[tool.poetry]
name = "flashcards-app"
version = "0.1.0"
description = "Τοπική εφαρμογή Flashcards με Python, PySide6 και SQLAlchemy 2.0"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
PySide6 = ">=6.10.1"
SQLAlchemy = "^2.0.0"
Pillow = "^10.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"